Mudando Caminho relativo favicon

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="/assets/favicon/FavLogoComFundo/favicon.ico"
+      href="./assets/favicon/FavLogoComFundo/favicon.ico"
     />
   </head>
   <body>
