corração de portugues

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <div class="content">
             <p>
               O verdadeiro sabor do açaí combinado a uma receita super secreta
-              maravilhosa. Venha esperimentar!
+              maravilhosa. Venha experimentar!
             </p>
             <a class="button" href="#contact">
               <svg
